fstgen/src/de/ovgu/cide/fstgen/parsers/generated_fj/FJParser.java
/* Generated By:JavaCC: Do not edit this line. FJParser.java */
package de.ovgu.cide.fstgen.parsers.generated_fj;
import java.io.*;
import java.util.*;
import cide.gast.*;
import cide.gparser.*;
import de.ovgu.cide.fstgen.ast.*;


public class FJParser extends AbstractFSTParser implements FJParserConstants {

  final public FSTInfo TypeDeclaration(boolean inTerminal) throws ParseException {
                                                Token first=null,t;FSTInfo n;
     first=getToken(1); productionStart(inTerminal);
    jj_consume_token(CLASS);
    n = Name(inTerminal);
                                    replaceName("Name", n);
                                                              replaceName(n);
    jj_consume_token(EXTENDS);
    n = ExtendedType(inTerminal);
                                                                                                                     replaceName(n);
    jj_consume_token(LBRACE);
    label_1:
    while (true) {
      if (jj_2_1(2)) {
        ;
      } else {
        break label_1;
      }
      n = VarDeclaration(inTerminal);
                                                                                                                                                                                      replaceName(n);
    }
    n = ClassConstructor(inTerminal);
                                                                                                                                                                                                                                         replaceName(n);
    label_2:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case OBJECT:
      case INT:
      case IDENTIFIER:
        ;
        break;
      default:
        jj_la1[0] = jj_gen;
        break label_2;
      }
      n = MethodDeclaration(inTerminal);
                                                                                                                                                                                                                                                                                            replaceName(n);
    }
    jj_consume_token(RBRACE);
    jj_consume_token(0);
                                                                                                                                                                                                                                                                                                                          {if (true) return productionEndNonTerminal("TypeDeclaration","{Name}","{Name}");}
    throw new Error("Missing return statement in function");
  }

  final public FSTInfo Name(boolean inTerminal) throws ParseException {
                                     Token first=null,t;FSTInfo n;
     first=getToken(1); productionStart(inTerminal);
    t = jj_consume_token(IDENTIFIER);
                        replaceName(new FSTInfo("<IDENTIFIER>",t.image));
                                                                            {if (true) return productionEndTerminal("Name","-","{<IDENTIFIER>}","Replacement","Default",first,token);}
    throw new Error("Missing return statement in function");
  }

  final public FSTInfo ExtendedType(boolean inTerminal) throws ParseException {
                                             Token first=null,t;FSTInfo n;
     first=getToken(1); productionStart(inTerminal);
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case IDENTIFIER:
      jj_consume_token(IDENTIFIER);
                      {if (true) return productionEndTerminal("ExtendedType1","-","-","Replacement","Default",first,token);}
      break;
    case OBJECT:
      jj_consume_token(OBJECT);
                   {if (true) return productionEndTerminal("ExtendedType2","-","-","Replacement","Default",first,token);}
      break;
    default:
      jj_la1[1] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
    throw new Error("Missing return statement in function");
  }

  final public FSTInfo VarDeclaration(boolean inTerminal) throws ParseException {
                                               Token first=null,t;FSTInfo n;
     first=getToken(1); productionStart(inTerminal);
    n = Type(true);
                      replaceName(n);
    t = jj_consume_token(IDENTIFIER);
                                                       replaceName(new FSTInfo("<IDENTIFIER>",t.image));
    jj_consume_token(38);
                                                                                                               {if (true) return productionEndTerminal("VarDeclaration","{<IDENTIFIER>}","{<IDENTIFIER>}","Replacement","Default",first,token);}
    throw new Error("Missing return statement in function");
  }

  final public FSTInfo ClassConstructor(boolean inTerminal) throws ParseException {
                                                 Token first=null,t;FSTInfo n;
     first=getToken(1); productionStart(inTerminal);
    n = Type(true);
                      replaceName("Type", n);
                                                replaceName(n);
    jj_consume_token(LPAREN);
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case OBJECT:
    case INT:
    case IDENTIFIER:
      n = FormalParameterList(true);
                                                                                                   replaceName(n);
      break;
    default:
      jj_la1[2] = jj_gen;
      ;
    }
    jj_consume_token(RPAREN);
    jj_consume_token(LBRACE);
    jj_consume_token(SUPER);
    jj_consume_token(LPAREN);
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case THIS:
    case NEW:
    case INTEGER_LITERAL:
    case IDENTIFIER:
    case LPAREN:
      n = ExpressionList(true);
                                                                                                                                                                  replaceName(n);
      break;
    default:
      jj_la1[3] = jj_gen;
      ;
    }
    jj_consume_token(RPAREN);
    jj_consume_token(38);
    label_3:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case THIS:
        ;
        break;
      default:
        jj_la1[4] = jj_gen;
        break label_3;
      }
      n = FieldAssign(true);
                                                                                                                                                                                                                  replaceName(n);
    }
    jj_consume_token(RBRACE);
                                                                                                                                                                                                                                          {if (true) return productionEndTerminal("ClassConstructor","{Type}","{Type}","Replacement","Default",first,token);}
    throw new Error("Missing return statement in function");
  }

  final public FSTInfo FieldAssign(boolean inTerminal) throws ParseException {
                                            Token first=null,t;FSTInfo n;
     first=getToken(1); productionStart(inTerminal);
    jj_consume_token(THIS);
    jj_consume_token(DOT);
    jj_consume_token(IDENTIFIER);
    jj_consume_token(39);
    jj_consume_token(IDENTIFIER);
    jj_consume_token(38);
                                                      {if (true) return productionEndTerminal("FieldAssign","-","-","Replacement","Default",first,token);}
    throw new Error("Missing return statement in function");
  }

  final public FSTInfo MethodDeclaration(boolean inTerminal) throws ParseException {
                                                  Token first=null,t;FSTInfo n;
     first=getToken(1); productionStart(inTerminal);
    n = Type(true);
                      replaceName(n);
    t = jj_consume_token(IDENTIFIER);
                                                       replaceName(new FSTInfo("<IDENTIFIER>",t.image));
    jj_consume_token(LPAREN);
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case OBJECT:
    case INT:
    case IDENTIFIER:
      n = FormalParameterList(true);
                                                                                                                                            replaceName(n);
      break;
    default:
      jj_la1[5] = jj_gen;
      ;
    }
    jj_consume_token(RPAREN);
    jj_consume_token(LBRACE);
    jj_consume_token(RETURN);
    n = Expression(true);
                                                                                                                                                                                                   replaceName(n);
    jj_consume_token(38);
    jj_consume_token(RBRACE);
                                                                                                                                                                                                                             {if (true) return productionEndTerminal("MethodDeclaration","{<IDENTIFIER>}","{<IDENTIFIER>}","Replacement","Default",first,token);}
    throw new Error("Missing return statement in function");
  }

  final public FSTInfo BinaryOperator(boolean inTerminal) throws ParseException {
                                               Token first=null,t;FSTInfo n;
     first=getToken(1); productionStart(inTerminal);
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case PLUS:
      jj_consume_token(PLUS);
              {if (true) return productionEndTerminal("BinaryOperator1","-","-","Replacement","Default",first,token);}
      break;
    case MINUS:
      jj_consume_token(MINUS);
              {if (true) return productionEndTerminal("BinaryOperator2","-","-","Replacement","Default",first,token);}
      break;
    case STAR:
      jj_consume_token(STAR);
              {if (true) return productionEndTerminal("BinaryOperator3","-","-","Replacement","Default",first,token);}
      break;
    case SLASH:
      jj_consume_token(SLASH);
              {if (true) return productionEndTerminal("BinaryOperator4","-","-","Replacement","Default",first,token);}
      break;
    default:
      jj_la1[6] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
    throw new Error("Missing return statement in function");
  }

  final public FSTInfo FormalParameterList(boolean inTerminal) throws ParseException {
                                                    Token first=null,t;FSTInfo n;
     first=getToken(1); productionStart(inTerminal);
    n = FormalParameter(true);
                                 replaceName(n);
    label_4:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case COMMA:
        ;
        break;
      default:
        jj_la1[7] = jj_gen;
        break label_4;
      }
      n = FormalParameterRest(true);
                                                                                replaceName(n);
    }
                                                                                                    {if (true) return productionEndTerminal("FormalParameterList","-","-","Replacement","Default",first,token);}
    throw new Error("Missing return statement in function");
  }

  final public FSTInfo FormalParameter(boolean inTerminal) throws ParseException {
                                                Token first=null,t;FSTInfo n;
     first=getToken(1); productionStart(inTerminal);
    n = Type(true);
                      replaceName(n);
    jj_consume_token(IDENTIFIER);
                                                     {if (true) return productionEndTerminal("FormalParameter","-","-","Replacement","Default",first,token);}
    throw new Error("Missing return statement in function");
  }

  final public FSTInfo FormalParameterRest(boolean inTerminal) throws ParseException {
                                                    Token first=null,t;FSTInfo n;
     first=getToken(1); productionStart(inTerminal);
    jj_consume_token(COMMA);
    n = FormalParameter(true);
                                     replaceName(n);
                                                       {if (true) return productionEndTerminal("FormalParameterRest","-","-","Replacement","Default",first,token);}
    throw new Error("Missing return statement in function");
  }

  final public FSTInfo Type(boolean inTerminal) throws ParseException {
                                     Token first=null,t;FSTInfo n;
     first=getToken(1); productionStart(inTerminal);
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case INT:
      jj_consume_token(INT);
                {if (true) return productionEndTerminal("Type1","-","{<IDENTIFIER>}","Replacement","Default",first,token);}
      break;
    case IDENTIFIER:
      t = jj_consume_token(IDENTIFIER);
                        replaceName(new FSTInfo("<IDENTIFIER>",t.image));
                                                                            {if (true) return productionEndTerminal("Type2","-","{<IDENTIFIER>}","Replacement","Default",first,token);}
      break;
    case OBJECT:
      jj_consume_token(OBJECT);
                   {if (true) return productionEndTerminal("Type3","-","{<IDENTIFIER>}","Replacement","Default",first,token);}
      break;
    default:
      jj_la1[8] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
    throw new Error("Missing return statement in function");
  }

  final public FSTInfo Expression(boolean inTerminal) throws ParseException {
                                           Token first=null,t;FSTInfo n;
     first=getToken(1); productionStart(inTerminal);
    n = Term(true);
                      replaceName(n);
    label_5:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case PLUS:
      case MINUS:
        ;
        break;
      default:
        jj_la1[9] = jj_gen;
        break label_5;
      }
      n = PlusOrMinus(true);
                                                             replaceName(n);
    }
                                                                                 {if (true) return productionEndTerminal("Expression","-","-","Replacement","Default",first,token);}
    throw new Error("Missing return statement in function");
  }

  final public FSTInfo PlusOrMinus(boolean inTerminal) throws ParseException {
                                            Token first=null,t;FSTInfo n;
     first=getToken(1); productionStart(inTerminal);
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case PLUS:
      n = PlusExpressionRest(true);
                                    replaceName(n);
                                                      {if (true) return productionEndTerminal("PlusOrMinus1","-","-","Replacement","Default",first,token);}
      break;
    case MINUS:
      n = MinusExpressionRest(true);
                                     replaceName(n);
                                                       {if (true) return productionEndTerminal("PlusOrMinus2","-","-","Replacement","Default",first,token);}
      break;
    default:
      jj_la1[10] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
    throw new Error("Missing return statement in function");
  }

  final public FSTInfo PlusExpressionRest(boolean inTerminal) throws ParseException {
                                                   Token first=null,t;FSTInfo n;
     first=getToken(1); productionStart(inTerminal);
    jj_consume_token(PLUS);
    n = Term(true);
                          replaceName(n);
                                            {if (true) return productionEndTerminal("PlusExpressionRest","-","-","Replacement","Default",first,token);}
    throw new Error("Missing return statement in function");
  }

  final public FSTInfo MinusExpressionRest(boolean inTerminal) throws ParseException {
                                                    Token first=null,t;FSTInfo n;
     first=getToken(1); productionStart(inTerminal);
    jj_consume_token(MINUS);
    n = Term(true);
                          replaceName(n);
                                            {if (true) return productionEndTerminal("MinusExpressionRest","-","-","Replacement","Default",first,token);}
    throw new Error("Missing return statement in function");
  }

  final public FSTInfo Term(boolean inTerminal) throws ParseException {
                                     Token first=null,t;FSTInfo n;
     first=getToken(1); productionStart(inTerminal);
    n = PrimaryExpression(true);
                                   replaceName(n);
    label_6:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case STAR:
      case SLASH:
        ;
        break;
      default:
        jj_la1[11] = jj_gen;
        break label_6;
      }
      n = TimesOrDivide(true);
                                                                            replaceName(n);
    }
                                                                                                {if (true) return productionEndTerminal("Term","-","-","Replacement","Default",first,token);}
    throw new Error("Missing return statement in function");
  }

  final public FSTInfo TimesOrDivide(boolean inTerminal) throws ParseException {
                                              Token first=null,t;FSTInfo n;
     first=getToken(1); productionStart(inTerminal);
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case STAR:
      n = TimesExpressionRest(true);
                                     replaceName(n);
                                                       {if (true) return productionEndTerminal("TimesOrDivide1","-","-","Replacement","Default",first,token);}
      break;
    case SLASH:
      n = DivideExpressionRest(true);
                                      replaceName(n);
                                                        {if (true) return productionEndTerminal("TimesOrDivide2","-","-","Replacement","Default",first,token);}
      break;
    default:
      jj_la1[12] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
    throw new Error("Missing return statement in function");
  }

  final public FSTInfo TimesExpressionRest(boolean inTerminal) throws ParseException {
                                                    Token first=null,t;FSTInfo n;
     first=getToken(1); productionStart(inTerminal);
    jj_consume_token(STAR);
    n = PrimaryExpression(true);
                                       replaceName(n);
                                                         {if (true) return productionEndTerminal("TimesExpressionRest","-","-","Replacement","Default",first,token);}
    throw new Error("Missing return statement in function");
  }

  final public FSTInfo DivideExpressionRest(boolean inTerminal) throws ParseException {
                                                     Token first=null,t;FSTInfo n;
     first=getToken(1); productionStart(inTerminal);
    jj_consume_token(SLASH);
    n = PrimaryExpression(true);
                                       replaceName(n);
                                                         {if (true) return productionEndTerminal("DivideExpressionRest","-","-","Replacement","Default",first,token);}
    throw new Error("Missing return statement in function");
  }
